--- a/MiraiConsultMVC/Views/Shared/_Layout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_Layout.cshtml
@@ -245,8 +245,8 @@
                 <div class="custom-navbar-inner tomenu-right-padding search-padding-left">
                     <div class="custom-margin-box topmenu-right-margin topnavbar-position-bottom-margin" style="border:none;margin-left: 1.3%;">
                         <div class="imgwidth">
-                            <a class="brand" href="../home/home.aspx">
-                                <img src="../Resources/image/logo.png" class="col-md-4 logoimage-width" />
+                            <a class="brand" href="@Url.Action("login","User")">
+                                <img src="../Resources/image/LogoForHeader.png" class="col-md-4 logoimage-width" />
                             </a>
                         </div>
                         <div class="container topnavbar-position topnavbar-position-bottom-margin unregtopnavbar-left-margin container-padding-top unreg-menu-search">
