--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -100,8 +100,8 @@
                 <div class="custom-navbar-inner tomenu-right-padding">
                     <div class="custom-margin-box" style="border:none">
                         <div class="imgwidth">
-                            <a class="brand" href="@Url.Action("home","home")">
-                                <img src="~/Content/image/logo.png" class="col-md-4 logoimage-width" />
+                            <a class="brand" href="http://www.miraihealth.com/" target="_blank">
+                                <img src="~/Content/image/LogoForHeader.png" class="col-md-4 logoimage-width" />
                             </a>
                         </div>
                         <div class="container topnavbar-position topnavbar-position-bottom-margin reg-menu-search container-margin">
@@ -329,9 +329,9 @@
                                 <img src="~/Content/image/blinkedin.png" class="cust-footer-icon" />
                             </a>
                         </div>
-                        <div style="float:right">
+                        @*<div style="float:right">
                             <a href="http://www.miraihealth.com/" target="_blank"><img src="~/Content/image/footer-logo.png" /></a>
-                        </div>
+                        </div>*@
                     </div>
                     <div class="visible-phone center_align" style="width:200px;margin:auto">
                         <div class=" center_align" style="float:left">
@@ -345,9 +345,9 @@
                                 <img src="~/Content/image/blinkedin.png" class="cust-footer-icon" />
                             </a>
                         </div>
-                        <div style="float:right">
+                        @*<div style="float:right">
                             <a href="http://www.miraihealth.com/" target="_blank"><img src="~/Content/image/footer-logo.png" /></a>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
             </div>
@@ -373,11 +373,11 @@
                                 |
                             </a>  <a class="cust-footer-text" href="@Url.Action("Contact","Home")" target="_blank">Contact Us</a> <a class="cust-footer-text" href="#">|</a> <a class="cust-footer-text" href="@Url.Action("TermsOfUse","Home")" target="_blank">Terms Of Use</a>
                         </div>
-                        <div class="span2 pull-right cust-footer-logo">
+                        @*<div class="span2 pull-right cust-footer-logo">
                             <a href="http://www.miraihealth.com/" target="_blank">
                                 <img src="~/Content/image/footer-logo.png" />
                             </a>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
             </div>
