--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -66,7 +66,7 @@
                                            
                                     }
                                     else if (HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Equals(ConfigurationManager.AppSettings["defaultUrl"].ToString())
-                                    || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("/login/User") || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("contact-us")
+                                    || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("login") || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("contact-us")
                                     || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("terms-of-use") || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("privacy-policy")
                                     || HttpContext.Current.Request.Url.AbsoluteUri.ToLower().Contains("how-we-works"))
                                     {
