Chenged the message.

--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                     }
-                    else if (ViewBag.lblErrorMessage == "You have already answered to this question.")
+                    else if (ViewBag.lblErrorMessage == "You have already answered this question.")
                     {
                         <div class="wrapper-bordered" id="ErrorMessagediv">
                             <div class="row-fluid">
