--- a/MiraiConsultMVC/Views/Home/Contact.cshtml
+++ b/MiraiConsultMVC/Views/Home/Contact.cshtml
@@ -21,7 +21,7 @@
                 <div class='row-fluid'>
                     <div class="span12">
                         <div class="title_color ">
-                            We would love to hear your thoughts and experience with Mirai Consult&#8482;.
+                            We would love to hear your thoughts and experience with Mirai Health&#8482;.
                         </div>
                     </div>
                 </div>
