--- a/MiraiConsultMVC/Views/Home/PrivacyPolicy.cshtml
+++ b/MiraiConsultMVC/Views/Home/PrivacyPolicy.cshtml
@@ -17,7 +17,7 @@
 
             health information. Because sharing information online is new we fully appreciate the sensitivity and personal nature of this data. This Privacy policy is made by us to answer
 
-            some of these concerns. We take reasonable steps to see that it is followed. When you sign-up to any of Mirai Health’s services (Mirai Consult&#8482;, Mirai Connect&#8482; and Mirai Care&#8482;), you
+            some of these concerns. We take reasonable steps to see that it is followed. When you sign-up to any of Mirai Health’s services (Mirai Health&#8482;, Mirai Connect&#8482; and Mirai Care&#8482;), you
 
             verify that you have read and agreed to our privacy policy.
         </p>
