--- a/MiraiConsultMVC/Views/Home/topicdetails.cshtml
+++ b/MiraiConsultMVC/Views/Home/topicdetails.cshtml
@@ -120,7 +120,7 @@
         }
     
          @section titleTags {
-            <title>Mirai Consult-@ViewBag.tag </title>
+            <title>Mirai Health-@ViewBag.tag </title>
         }
         <script type="text/javascript" src="~/Content/js/utility.js"></script>
         <script type="text/javascript">
