--- a/MiraiConsultMVC/Views/Shared/Error.cshtml
+++ b/MiraiConsultMVC/Views/Shared/Error.cshtml
@@ -42,7 +42,7 @@
                                     Please leave your login ID and take a moment to describe the circumstances under
                                     which this error occurred.
                                     <br />
-                                    This report will be sent to the Mirai Consult&#8482; team which will help them to troubleshoot
+                                    This report will be sent to the Mirai Health&#8482; team which will help them to troubleshoot
                                     and resolve this issue.
                                 </p>
                                 @Html.TextArea("name", "", new { @class = "custom_textarea", rows = "2", cols = "20", id = "ErrorDes" })
