--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     @RenderSection("titleTags", required: false)
-    <title>Mirai Consult ™ </title>        
+    <title>Mirai Health™ </title>        
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
     <link rel="stylesheet" href="~/Scripts/google-code-prettify/prettify.css" />
     <link rel="stylesheet" href="~/Content/font-awesome.min.css" />
@@ -137,7 +137,7 @@
                                         <div class="pull-right menu-padding-bottom">
                                             <ul class="nav">
                                                 <li class="dropdown">
-                                                    <a href="#" class="dropdown-toggle menu-padding" data-toggle="dropdown">New to Mirai Consult&#8482;? <b><u>Signup</u></b> here<b class="caret"></b></a>
+                                                    <a href="#" class="dropdown-toggle menu-padding" data-toggle="dropdown">New to Mirai Health&#8482;? <b><u>Signup</u></b> here<b class="caret"></b></a>
                                                     <ul class="dropdown-menu">
                                                         <li><a href="@Url.Action("PatientSignUp", "User")"><i class="icon-user"></i>Sign Up as Patient</a></li>
                                                         <li class="divider"></li>
