--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -77,18 +77,18 @@
             <div class="row-fluid">
                 <div class="span12">
                     <p class="home_First_p textareadiv-margin tagPara" style="color: #3C3C3C">
-                        Mirai Consult<sup>TM</sup> aims to support your health related decisions. Responses provided on Mirai Consult<sup>TM</sup>
-                        do not substitute a physical consultation with your physician.  Mirai Consult<sup>TM</sup> is not to be used for medical emergencies.
+                        Mirai Health<sup>TM</sup> aims to support your health related decisions. Responses provided on Mirai Health<sup>TM</sup>
+                        do not substitute a physical consultation with your physician.  Mirai Health<sup>TM</sup> is not to be used for medical emergencies.
                     </p>
 
                 </div>
             </div>
         </div>
         @section metatags {
-            <meta property="og:title" content="MiraiConsult" />
+            <meta property="og:title" content="MiraiHealth" />
             <meta property="og:url" content="@ViewBag.AskmiraiUrl">
             <meta property="og:image" content="@ViewBag.AskmiraiUrl/Content/image/logoImage.png" />
-            <meta property="og:description" content="Healthcare now more accessible and convenient at Mirai Consult" />
+            <meta property="og:description" content="Healthcare now more accessible and convenient at Mirai Health" />
             <meta property="og:type" content="website" />
         }
         @*<script src="~/Scripts/jquery-1.9.1.min.js"></script>*@
