--- a/MiraiConsultMVC/Views/Home/Static404.cshtml
+++ b/MiraiConsultMVC/Views/Home/Static404.cshtml
@@ -5,7 +5,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
    <meta charset="utf-8">
-    <title>Mirai Consult ™ </title>
+    <title>Mirai Health ™ </title>
     <link rel="stylesheet" href="/Content/bootstrap.min.css">
     <link rel="Stylesheet" href="/Content/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="/Content/custom.css">
