--- a/MiraiConsultMVC/Views/Shared/_Layout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
-    <title>Mirai Consult ™ </title>
+    <title>Mirai Health ™ </title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" href="app/Resources/css/bootstrap.min.css" />
