--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     @RenderSection("titleTags", required: false)
-    <title>Mirai Consult ™ </title>
+    <title>Mirai Health ™ </title>
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
     <link href="~/Content/navigation.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/Scripts/google-code-prettify/prettify.css" />
@@ -78,7 +78,7 @@
                             <div class="pull-right paddingrightby3">
                                 <ul class="nav">
                                     <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">New to Mirai Consult&#8482;? Signup here<b class="caret"></b></a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">New to Mirai Health&#8482;? Signup here<b class="caret"></b></a>
                                         <ul class="dropdown-menu">
                                             <li><a href="@Url.Action("patientsignup", "User")"><i class="icon-user"></i>Signup as Patient</a></li>
                                             <li class="divider"></li>
