Commit : mobile no is mandatory while signing up to consult

--- a/MiraiConsultMVC/Views/User/PatientSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/PatientSignUp.cshtml
@@ -221,7 +221,7 @@
                                 </div>
                                 <div class="span6">
                                     <div class="span4">
-                                        <label class="cust-font-style">Mobile No:</label>
+                                        <label class="required cust-font-style">Mobile No:</label>
                                     </div>
                                     <div class="span8">
                                         @Html.TextBoxFor(m => m.MobileNo, new { @Class = "input-block-level cust-lightgreen cust-gray contact_margin", placeholder = "Mobile No", @onkeypress = "return isNumber(event,10,this);", @autocomplete = "off" })<br />
