--- a/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
@@ -114,7 +114,7 @@
                                     <div class="span12">
                                         <div class="span6">
                                             <div class="span4">
-                                                <label class="cust-font-style">Mobile No:</label>
+                                                <label class="required cust-font-style">Mobile No:</label>
                                             </div>
                                             <div class="span8">
                                                 @Html.TextBoxFor(m => m.MobileNo, new { @class = "cust-no-border cust-gray input-block-level contact_margin", @maxlength = "10", @placeholder = "Mobile No", @onkeypress = "return isNumber(event,10,this);", @autocomplete = "off" })<br />
