--- a/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
+++ b/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
@@ -97,7 +97,7 @@
                                   }
                               }
                                webaddress = Convert.ToString(ConfigurationManager.AppSettings["websiteUrl"]);
-                               AskmiraiUrl = Convert.ToString(ConfigurationSettings.AppSettings["askMiraiLink"]);
+                               AskmiraiUrl = Convert.ToString(ConfigurationSettings.AppSettings["defaultUrl"]);
                                FacebookAppKey = Convert.ToString(ConfigurationSettings.AppSettings["FacebookAppKey"]);
                             }
                             <a href='#' onclick="shareOnFacebook('MiraiHealth','Healthcare now more accessible and convenient at Mirai Health&#8482;','0','@(AskmiraiUrl)', '@(FacebookAppKey)', '@(userType)')">
