--- a/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
@@ -256,7 +256,7 @@
     <meta name="description" content="@ViewBag.QuestionText">
     <meta property="og:title" content="@ViewBag.metatitle" />
     <meta property="og:url" content="@ViewBag.metaUrl">
-    <meta property="og:image" content="@ConfigurationSettings.AppSettings["askMiraiLink"]/Content/image/logoImage.png" />
+    <meta property="og:image" content="@ConfigurationSettings.AppSettings["defaultUrl"]/Content/image/logoImage.png" />
     <meta property="og:description" content="@ViewBag.metaDescription" />
     <meta property="og:type" content="website" />
 }
