Consolidated all config changes into release configuration.

--- a/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
+++ b/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
@@ -96,7 +96,7 @@
                                       userType = "Patient";
                                   }
                               }
-                               webaddress = Convert.ToString(ConfigurationManager.AppSettings["websiteUrl"]);
+                               webaddress = Convert.ToString(ConfigurationManager.AppSettings["website"]);
                                AskmiraiUrl = Convert.ToString(ConfigurationSettings.AppSettings["defaultUrl"]);
                                FacebookAppKey = Convert.ToString(ConfigurationSettings.AppSettings["FacebookAppKey"]);
                             }
