--- a/MiraiConsultMVC/Views/appointments/Prepay.cshtml
+++ b/MiraiConsultMVC/Views/appointments/Prepay.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MiraiConsultMVC.EFModels.appointment
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_AskmiraiMasterLayout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -12,85 +12,62 @@
     <title>Prepay for appointment</title>
 </head>
 <body>
-    <div>
-        <h4>Appointment Details</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.subject)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.subject)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.description)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.description)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.starttime)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.starttime)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.endtime)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.endtime)
-            </dd>    
-            <dt>
-                @Html.DisplayNameFor(model => model.patientname)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.patientname)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.patientemail)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.patientemail)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.patientmobile)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.patientmobile)
-            </dd>   
-            <dt>
-                @Html.DisplayNameFor(model => model.prepayamount)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.prepayamount)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.prepay_by)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.prepay_by)
-            </dd>
-    
-        </dl>
-    </div>
-    <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.appointmentid }) |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
+    <p/>
+    @if (Model != null) {
+            <div class="row-fluid">
+                <div class="span12">
+                    <div class=" main-outter-padding toppaddingHome finddoc-title">
+                        Appointment For @Model.patientname On @Model.starttime.ToString("MMMM dd, yyyy")
+                    </div>
+                </div>
+            </div>        
+            
+            <div class="row-fluid">
+                <div class="span1"></div>
+                <div class="span10 left doc-clinic-container">
+                    <div class="span10 doc-div-min-height">
+                        <div class="left loc-label doc-div-min-height span2"><h5>Doctor:</h5></div>
+                        <div class="span6 doc-div-min-height left doc-detail-word-break">                
+                            <h5>Dr. @ViewBag.doc.firstname @ViewBag.doc.lastname</h5>
+                        </div>
+                    </div>
+                    <div class="span10 doc-div-min-height margin-null">
+                        <div class="left loc-label doc-div-min-height span2">Date:</div>
+                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.starttime.ToString("MMMM dd, yyyy")</div>
+                    </div>
+                    <div class="span10 doc-div-min-height margin-null">
+                        <div class="left loc-label doc-div-min-height span2">Time:</div>
+                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.starttime.ToString("HH:mm tt") to @Model.endtime.ToString("hh:mm tt")</div>
+                    </div>
+                    <div class="span10 doc-div-min-height margin-null">
+                        <div class="left loc-label doc-div-min-height span2">Subject:</div>
+                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.subject</div>
+                    </div>
+                    <div class="span10 doc-div-min-height margin-null">
+                        <div class="left loc-label doc-div-min-height span2">Clinic Name:</div>
+                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.doclocation.clinicname</div>
+                    </div>
+                    <div class="span10 doc-div-min-height margin-null">
+                        <div class="left loc-label doc-div-min-height span2">Address:</div>
+                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.doclocation.address</div>
+                    </div>
+                    <div class="span10 doc-div-min-height margin-null">
+                        <div class="left loc-label doc-div-min-height span2">Phone:</div>
+                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.doclocation.telephone</div>
+                    </div>
+                    <div class="span10 doc-div-min-height margin-null">
+                        <div class="left loc-label doc-div-min-height span2">Fees:</div>
+                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.prepayamount</div>
+                    </div>
+                    <div class="span10 doc-div-min-height margin-null">
+                        <div class="left loc-label doc-div-min-height span2">Pay By:</div>
+                        <div class="span6 doc-div-min-height left doc-detail-word-break">@Model.prepay_by.GetValueOrDefault().ToString("MMMM dd, yyyy hh:mm tt")</div>
+                    </div>
+                </div>
+            </div>
+     }
+    else {
+        <h3>No such appointment found. Please call Mirai Health number for further help.</h3>
+    }
 </body>
 </html>
