--- a/MiraiConsultMVC/Views/appointments/Prepay.cshtml
+++ b/MiraiConsultMVC/Views/appointments/Prepay.cshtml
@@ -14,14 +14,26 @@
 <body>
     <p/>
     @if (Model != null) {
+        if (Model.prepayamount > 0 && Model.ispaid.GetValueOrDefault())
+        {
+            <div class="row-fluid">
+                <div class="span12">
+                    <div class=" main-outter-padding toppaddingHome finddoc-title">
+                        This appointment has been paid for and confirmed.
+                    </div>
+                </div>
+            </div>
+        }
+        else
+        {
             <div class="row-fluid">
                 <div class="span12">
                     <div class=" main-outter-padding toppaddingHome finddoc-title">
                         Appointment For @Model.patientname On @Model.starttime.ToString("MMMM dd, yyyy")
                     </div>
                 </div>
-            </div>        
-            
+            </div>
+        }
             <div class="row-fluid">
                 <div class="span1"></div>
                 <div class="span10 left doc-clinic-container">
