--- a/MiraiConsultMVC/Views/appointments/Prepay.cshtml
+++ b/MiraiConsultMVC/Views/appointments/Prepay.cshtml
@@ -14,7 +14,8 @@
 <body>
     <p/>
     @if (Model != null) {
-        if (Model.prepayamount > 0 && Model.ispaid.GetValueOrDefault())
+        bool paid = Model.prepayamount > 0 && Model.ispaid.GetValueOrDefault();
+        if (paid)
         {
             <div class="row-fluid">
                 <div class="span12">
@@ -31,12 +32,19 @@
                     <div class=" main-outter-padding toppaddingHome finddoc-title">
                         Appointment For @Model.patientname On @Model.starttime.ToString("MMMM dd, yyyy")
                     </div>
+                    <div class="span1">&nbsp;</div>
+                </div>
+            </div>
+            <div class="row-fluid">
+                <div class="span1"></div>
+                <div class="span11">
+                    <a href="/payment/a/@Model.appointmentid" class="book_appt_button pad10">Pay now</a>
                 </div>
             </div>
         }
             <div class="row-fluid">
                 <div class="span1"></div>
-                <div class="span10 left doc-clinic-container">
+                <div class="span11 left doc-clinic-container">
                     <div class="span10 doc-div-min-height">
                         <div class="left loc-label doc-div-min-height span2"><h5>Doctor:</h5></div>
                         <div class="span6 doc-div-min-height left doc-detail-word-break">                
@@ -77,8 +85,18 @@
                     </div>
                 </div>
             </div>
-     }
-    else {
+            if (!paid)
+            {
+                <div class="row-fluid">
+                    <div class="span1"></div>
+                    <div class="span11">
+                        <a href="/payment/a/@Model.appointmentid" class="book_appt_button pad10">Pay now</a>
+                    </div>
+                </div>
+            }
+    }
+    else
+    {
         <h3>No such appointment found. Please call Mirai Health number for further help.</h3>
     }
 </body>
