Payments - work in progress.

--- a/MiraiConsultMVC/Views/appointments/Prepay.cshtml
+++ b/MiraiConsultMVC/Views/appointments/Prepay.cshtml
@@ -38,7 +38,7 @@
             <div class="row-fluid">
                 <div class="span1"></div>
                 <div class="span11">
-                    <a href="/payment/a/@Model.appointmentid" class="book_appt_button pad10">Pay now</a>
+                    <a href="/make_payment" class="book_appt_button pad10">Pay now</a>
                 </div>
             </div>
         }
@@ -90,7 +90,7 @@
                 <div class="row-fluid">
                     <div class="span1"></div>
                     <div class="span11">
-                        <a href="/payment/a/@Model.appointmentid" class="book_appt_button pad10">Pay now</a>
+                        <a href="/make_payment" class="book_appt_button pad10">Pay now</a>
                     </div>
                 </div>
             }
