--- a/MiraiConsultMVC/Views/cca_payment/InitiatePayment.cshtml
+++ b/MiraiConsultMVC/Views/cca_payment/InitiatePayment.cshtml
@@ -20,7 +20,7 @@
 <body>
     <form id="nonseamless" method="post" name="redirect" action="@ViewBag.ccavenueUrl">
         <input type="hidden" id="encRequest" name="encRequest" value="@ViewBag.ccaRequest" />
-        <input type="hidden" name="access_code" id="Hidden1" value="@ViewBag.accesCode" />
+        <input type="hidden" name="access_code" id="Hidden1" value="@ViewBag.accessCode" />
     </form>
 </body>
 </html>
