--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div style="width: 950px; margin: 0px auto;">
-<h2>This is the layout for the pages controller</h2>
+<h2>Daily Pilot Lite</h2>
 <%= yield %>
 </div>
 </body>
