--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,7 +4,12 @@
 -->
 <!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script> -->
 <!-- <%= javascript_include_tag "daypilot-all.min" %> -->
+<!-- <script type="text/javascript" src="/js/lib/underscore-min.js"></script> -->
+
+
+
 <script src="javascript/calender/daypilot-all.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="javascript/pages/pages.js"></script>
 
 <div ng-app="main" ng-controller="DemoCtrl" >
   <daypilot-calendar id="dp" daypilot-config="config" daypilot-events="events" ></daypilot-calendar>
@@ -30,49 +35,3 @@
   </div>
 </div>
 
-<script type="text/javascript">
-
-  var app = angular.module('main', ['daypilot']).controller('DemoCtrl', function($scope) {
-
-      $scope.config = {
-          startDate: "2014-09-01",
-          viewType: "Week"
-      };
-
-      $scope.events = [
-          {
-              start: new DayPilot.Date("2014-09-01T10:00:00"),
-              end: new DayPilot.Date("2014-09-01T14:00:00"),
-              id: DayPilot.guid(),
-              text: "First Event"
-          }
-      ];
-
-      $scope.add = function() {
-          $scope.events.push(
-                  {
-                      start: new DayPilot.Date("2014-09-01T10:00:00"),
-                      end: new DayPilot.Date("2014-09-01T12:00:00"),
-                      id: DayPilot.guid(),
-                      text: "Simple Event"
-                  }
-          );
-      };
-
-      $scope.move = function() {
-          var event = $scope.events[0];
-          event.start = event.start.addDays(1);
-          event.end = event.end.addDays(1);
-      };
-
-      $scope.rename = function() {
-          $scope.events[0].text = "New name";
-      };
-
-      $scope.message = function() {
-          $scope.dp.message("Hi");
-      };
-
-  });
-
-</script>
