--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -11,7 +11,7 @@
 <script src="javascript/calender/daypilot-all.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="javascript/pages/pages.js"></script>
 <link type="text/css" rel="stylesheet" href="css/calender/custom_theme.css" />
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+<link type="text/css" rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
 
 <div ng-app="main" ng-controller="DemoCtrl">
   <div class="space">
